# cplusplus23_course_gakwaya

02_Environment_Setup/01_Project_template_modules/: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
02_Environment_Setup/02_Project_template_headers/: CMakeLists.txt  main.cpp
03_First_Steps/02_First_Cpp_Program_Basics_Headers/: CMakeLists.txt  main.cpp  utilities.h  vcpkg.json
03_First_Steps/02_First_Cpp_Program_Basics_Modules/: CMakeLists.txt  main.cpp  utilities.ixx
03_First_Steps/03_Cpp_Program_Execution_Model_Headers/: main.cpp  utilities.h
03_First_Steps/03_Cpp_Program_Execution_Model_Modules/: CMakeLists.txt  main.cpp  utilities.ixx
03_First_Steps/04_GUI_Challenge_Headers/: CMakeLists.txt  main.cpp  utilities.h
03_First_Steps/04_GUI_Challenge_Modules/: CMakeLists.txt  main.cpp  utilities.ixx
03_First_Steps/05_CMake_Build_Terminal/: main.cpp  vcpkg.json
04_Variables_And_Datatypes_And_Operations/01_Variables_Data_Types_Headers/: main.cpp  utilities.cpp  utilities.h  vcpkg.json
04_Variables_And_Datatypes_And_Operations/01_Variables_Data_Types_Modules/: CMakeLists.txt  main.cpp  utilities.ixx
04_Variables_And_Datatypes_And_Operations/02_Integer_Modifiers_Characters_Text_Auto_Headers/: CMakeLists.txt  main.cpp  utilities.cpp  utilities.h
04_Variables_And_Datatypes_And_Operations/02_Integer_Modifiers_Characters_Text_Auto_Modules/: CMakeLists.txt  main.cpp  utilities.ixx  vcpkg.json
04_Variables_And_Datatypes_And_Operations/03_Task01_Number_Systems/: CMakeLists.txt  exercise.cpp  exercise.h  main.cpp  vcpkg.json
(+1 files in other folders)
